--- a/sparklabs/templates/sparklabs/about.html
+++ b/sparklabs/templates/sparklabs/about.html
@@ -32,10 +32,10 @@
 
       <nav class="navbar">
         <a href="/" class="active">Home</a>
-        <a href="/about">About</a>
-        <a href="/services">Services</a>
-        <a href="/portfolio">portfolio</a>
-        <a href="/contact">Contact</a>
+        <a href="/about/">About</a>
+        <a href="/services/">Services</a>
+        <a href="/portfolio/">portfolio</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </header>
 
@@ -104,7 +104,7 @@
       <a href="#"><i class='bx bxl-github' ></i></a>
       <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
     </div>
-    <a href="contact" class="btn">Contact Us</a>
+    <a href="/contact/" class="btn">Contact Us</a>
   </div>
 </section>
 
