--- a/sparklabs/templates/sparklabs/index.html
+++ b/sparklabs/templates/sparklabs/index.html
@@ -31,10 +31,10 @@
 
       <nav class="navbar">
         <a href="/" class="active">Home</a>
-        <a href="/about">About</a>
-        <a href="/services">Services</a>
-        <a href="/portfolio">portfolio</a>
-        <a href="/contact">Contact</a>
+        <a href="/about/">About</a>
+        <a href="/services/">Services</a>
+        <a href="/portfolio/">portfolio</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </header>
 <!-- Home Section Design -->
@@ -52,7 +52,7 @@
       <a href="https://github.com/mbachalabro"><i class='bx bxl-github' ></i></a>
       <!-- <a href="#"><i class='bx bxl-linkedin-square' ></i></a> -->
     </div>
-    <a href="portfolio" class="btn">Visit Projects</a>
+    <a href="/portfolio/" class="btn">Visit Projects</a>
   </div>
 
   <div class="home-img">
