--- a/sparklabs/templates/sparklabs/services.html
+++ b/sparklabs/templates/sparklabs/services.html
@@ -32,10 +32,10 @@
 
       <nav class="navbar">
         <a href="/" class="active">Home</a>
-        <a href="/about">About</a>
-        <a href="/services">Services</a>
-        <a href="/portfolio">portfolio</a>
-        <a href="/contact">Contact</a>
+        <a href="/about/">About</a>
+        <a href="/services/">Services</a>
+        <a href="/portfolio/">portfolio</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </header>
 
