Image Url change

--- a/sparklabs/templates/sparklabs/services.html
+++ b/sparklabs/templates/sparklabs/services.html
@@ -23,7 +23,7 @@
     <!-- Header Design -->
     <header class="header">
       <span class="logo-span"> 
-        <img id="logo_image" src="{% static 'sparklabs/images/spark.png' %}" alt="Sparkline Labs">
+        <img id="logo_image" src="{% static '/sparklabs/images/spark.png' %}" alt="Sparkline Labs">
         <a href="/" class="logo">Sparkline Labs</a>
       </span>
 
@@ -100,6 +100,6 @@
     <!--Scroll Reveal  -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Custom js-->
-    <script src="{% static 'sparklabs/js/script.js' %}"></script>
+    <script src="{% static '/sparklabs/js/script.js' %}"></script>
   </body>
 </html>
