Static files and images changed

--- a/sparklabs/templates/sparklabs/services.html
+++ b/sparklabs/templates/sparklabs/services.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %} {% endblock %}</title>
+    <title>Our Services</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'sparklabs/images/favicon.png' %}" >
 
     <!-- Box Icons -->
     <!-- <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> -->
@@ -23,12 +24,12 @@
     <!-- Header Design -->
     <header class="header">
       <span class="logo-span"> 
-        <img id="logo_image" src="{% static '/sparklabs/images/spark.png' %}" alt="Sparkline Labs">
+        <img id="logo_image" src="{% static '/sparklabs/images/spark.webp' %}" alt="Sparkline Labs">
         <a href="/" class="logo">Sparkline Labs</a>
       </span>
 
       <i class="bx bx-menu" id="menu-icon"></i>
-      <!-- <img src="/images/menu-logo.png" id="menu-icon" class="" alt=""> -->
+      <!-- <img src="/images/menu-logo.webp" id="menu-icon" class="" alt=""> -->
 
       <nav class="navbar">
         <a href="/" class="active">Home</a>
@@ -89,12 +90,11 @@
       </div>
       <div class="footer-iconTop">
         <!-- UP Arrow icon -->
-        <!-- <a href="#home" ><img src="{% static 'sparklabs/images/up-arrow-alt-regular-24.png' %}" alt=""/></a> -->
+        <!-- <a href="#home" ><img src="{% static 'sparklabs/images/up-arrow-alt-regular-24.webp' %}" alt=""/></a> -->
       </div>
     </footer>
 
     <!-- Icons -->
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <!-- Typed js -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!--Scroll Reveal  -->
