--- a/sparklabs/templates/sparklabs/index.html
+++ b/sparklabs/templates/sparklabs/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %} {% endblock %}</title>
-
+    <title>Sparkline Labs</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'sparklabs/images/favicon.png' %}" >
     <!-- Box Icons -->
     <!-- <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> -->
     <link
@@ -23,7 +23,7 @@
     <!-- Header Design -->
     <header class="header">
       <span class="logo-span"> 
-        <img id="logo_image" src="{% static 'sparklabs/images/spark.png' %}" alt="Sparkline Labs">
+        <img id="logo_image" src="{% static 'sparklabs/images/spark.webp' %}" alt="">
         <a href="/" class="logo">Sparkline Labs</a>
       </span>
 
@@ -56,7 +56,7 @@
   </div>
 
   <div class="home-img">
-    <img src="{% static '/sparklabs/images/sparklinelabs.png' %}" alt="" />
+    <img src="{% static '/sparklabs/images/sparklinelabs.webp' %}" alt="" />
   </div>
 </section>
 
@@ -69,7 +69,7 @@
       </div>
       <div class="footer-iconTop">
         <!-- UP Arrow icon -->
-        <!-- <a href="#home" ><img src="{% static 'sparklabs/images/up-arrow-alt-regular-24.png' %}" alt=""/></a> -->
+        <!-- <a href="#home" ><img src="{% static 'sparklabs/images/up-arrow-alt-regular-24.webp' %}" alt=""/></a> -->
       </div>
     </footer>
 
@@ -77,7 +77,6 @@
     
     {% endblock %}
     <!-- Icons -->
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <!-- Typed js -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!--Scroll Reveal  -->
