Image urls changed

--- a/sparklabs/templates/sparklabs/index.html
+++ b/sparklabs/templates/sparklabs/index.html
@@ -56,7 +56,7 @@
   </div>
 
   <div class="home-img">
-    <img src="{% static '/sparklabs/images/sparklinelabs.webp' %}" alt="" />
+    <img src="{% static '/sparklabs/images/home.webp' %}" alt="" />
   </div>
 </section>
 
