--- a/sparklabs/templates/sparklabs/base.html
+++ b/sparklabs/templates/sparklabs/base.html
@@ -23,7 +23,7 @@
     <!-- Header Design -->
     <header class="header">
       <span class="logo-span"> 
-        <img id="logo_image" src="{% static 'sparklabs/images/spark.webp' %}" alt="Sparkline Labs">
+        <img id="logo_image" src="{% static 'sparklabs/images/logo.webp' %}" alt="Sparkline Labs">
         <a href="/" class="logo">Sparkline Labs</a>
       </span>
 
