--- a/sparklabs/templates/sparklabs/about.html
+++ b/sparklabs/templates/sparklabs/about.html
@@ -64,10 +64,9 @@
       ever-evolving digital world.
     </p>
     <div class="social-media">
+      <a href="https://github.com/mbachalabro"><i class='bx bxl-github' ></i></a>
       <a href="https://www.facebook.com/sparkline.labs"<i class='bx bxl-facebook-circle'></i></a>
-      <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-      <a href="#"><i class='bx bxl-github' ></i></a>
-      <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+      <a href="https://wa.me/message/F7JXYHY233N7P1"><i class='bx bxl-whatsapp'></i></a>
     </div>
     <a href="/contact/" class="btn">Contact Us</a>
   </div>
