--- a/sparklabs/templates/sparklabs/portfolio.html
+++ b/sparklabs/templates/sparklabs/portfolio.html
@@ -10,15 +10,31 @@
       <div class="portfolio-box">
         <img
           class="project-img"
-          src="{% static 'projects/images/carawear.png' %}"
+          src="{% static 'projects/images/carawears.webp' %}"
           alt=""
         />
         <div class="portfolio-layer">
-          <h4>CaraWear</h4>
+          <h4>CaraWears</h4>
           <p>
-            CaraWear is wearing brand website made with html, css and js   
+            CaraWears is wearing brand website made with html, css, js and django   
           </p>
-          <a href="https://carawear.vercel.app/"
+          <a href="https://carawears.vercel.app/"
+            ><i class='bx bx-link-external'></i></a>
+        </div>
+      </div>
+
+        <div class="portfolio-box">
+        <img
+          class="project-img"
+          src="{% static 'projects/images/sparklinestore.webp' %}"
+          alt="Sparkline Store Image"
+        />
+        <div class="portfolio-layer">
+          <h4>Sparkline Store</h4>
+          <p>
+            Sparkline Store is tech gadgets website made with html, css and js   
+          </p>
+          <a href="https://sparkline-store.vercel.app/"
             ><i class='bx bx-link-external'></i></a>
         </div>
       </div>
