Open links externaly

--- a/sparklabs/templates/sparklabs/portfolio.html
+++ b/sparklabs/templates/sparklabs/portfolio.html
@@ -18,7 +18,7 @@
           <p>
             CaraWears is wearing brand website made with html, css, js and django   
           </p>
-          <a href="https://carawears.vercel.app/"
+          <a target=”_blank” href="https://carawears.vercel.app/"
             ><i class='bx bx-link-external'></i></a>
         </div>
       </div>
@@ -34,7 +34,7 @@
           <p>
             Sparkline Store is tech gadgets website made with html, css and js   
           </p>
-          <a href="https://sparkline-store.vercel.app/"
+          <a target=”_blank” href="https://sparkline-store.vercel.app/"
             ><i class='bx bx-link-external'></i></a>
         </div>
       </div>
