--- a/sparklabs/templates/sparklabs/index.html
+++ b/sparklabs/templates/sparklabs/index.html
@@ -12,9 +12,9 @@
       Spark your startup's potential, or ignite your existing business online. Sparkline Labs offers cutting-edge tech solutions and lasting support to fuel your online presence and drive long-term success. Let's Chat!
     </p>
     <div class="social-media">
-      <a href="https://github.com/mbachalabro"><i class='bx bxl-github' ></i></a>
-      <a href="https://www.facebook.com/sparkline.labs"<i class='bx bxl-facebook-circle'></i></a>
-      <a href="https://wa.me/message/F7JXYHY233N7P1"><i class='bx bxl-whatsapp'></i></a>
+      <a target=”_blank” href="https://github.com/mbachalabro"><i class='bx bxl-github' ></i></a>
+      <a target=”_blank” href="https://www.facebook.com/sparkline.labs"<i class='bx bxl-facebook-circle'></i></a>
+      <a target=”_blank” href="https://wa.me/message/F7JXYHY233N7P1"><i class='bx bxl-whatsapp'></i></a>
     </div>
     <a href="/portfolio/" class="btn">Visit Projects</a>
   </div>
